<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Wallpaper hidup 3D-4K&amp;HD</string>
    <string name="set_Wallpager">设置壁纸</string>
    <string name="Wallpager_loading">壁纸正在加载中...</string>
    <string name="setting">设置</string>
    <string name="evaluation">评价</string>
    <string name="Privacy_Policy">隐私政策</string>
    <string name="Rate_Us">联系我们</string>
    <string name="feed_back_content">享受这个应用?现在给我们五星评价开始在谷歌商店!</string>
    <string name="feed_back_title">反馈</string>
    <string name="feed_back_tips">我们真诚期待你的反馈,谢谢!</string>
    <string name="email">Email...</string>
    <string name="suggestion">您的建议...</string>
    <string name="submit">提交</string>
    <string name="feed_back_success">反馈成功</string>
    <string name="google_play_install_tip">请安装谷歌商店</string>
    <string name="retry">重试</string>
</resources>