<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg">
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dialog_close"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_title"
        android:textColor="@color/theme_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_tips"
        android:textColor="@color/color_243040"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/shape_edit_text"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="22dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/color_28293C"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingStart="12dp"/>
    <EditText
        android:id="@+id/et_suggestion"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/shape_edit_text"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="12dp"
        android:hint="@string/suggestion"
        android:textColorHint="@color/color_28293C"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingStart="12dp"/>
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:background="@drawable/shape_btn"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="45dp"/>
</LinearLayout>