<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">
    <com.live.wallpaper.view.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_return"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_evaluation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_243040"
        android:layout_marginHorizontal="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluation"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_private_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Privacy_Policy"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_underline_bg"/>

</LinearLayout>